# myflights

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md
api/: Procfile  README.md  pyproject.toml
api/aloft/: config.py  db.py  ids.py  logging.py  main.py  models.py  schemas.py  security.py
api/aloft/opensky/: __init__.py  airports.py  auth.py  client.py  legs.py  limiter.py  resolver.py  tracks.py
api/aloft/routes/: resolve.py  schedule.py  tracks.py
api/aloft/schedule/: aerodatabox.py
api/scripts/: seed_aircraft_types.py  seed_airlines.py  seed_airports.py  seed_sample_flights.py  sync_aircraft_db.py  test_opensky.py  test_resolver.py  test_track_pipeline.py
api/tests/: test_tracks.py
docs/: erd.md
web/: .env.example  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
web/app/: globals.css  layout.tsx  loading.tsx  page.tsx  sw.ts
web/components/: add-flight-sheet-loader.tsx  add-flight-sheet.tsx  aircraft-photo.tsx  airport-input.tsx  altitude-chart-loader.tsx  altitude-chart.tsx  bottom-tab-bar.tsx  date-picker.tsx  flight-card.tsx  flight-detail-actions.tsx  flight-status-badge.tsx  pending-refresh.tsx  service-worker-cleanup.tsx  yearly-chart-loader.tsx  yearly-chart.tsx
web/lib/: add-flight-store.ts  aircraft.ts  airports.ts  aloft-api.ts  auth-handlers.ts  auth.ts  flights.ts  geojson.ts  great-circle.ts  map-flights.ts  owner.ts  planespotters.ts  prisma.ts  session.ts  stats.ts  trips.ts
web/prisma/: schema.prisma
web/public/: manifest.webmanifest
web/scripts/: backfill-aircraft-co2.ts  (+2 more)
(+39 files in other folders)
