[project]
name = "aloft-api"
version = "0.1.0"
description = "Aloft — OpenSky resolution pipeline, Gmail parser, and heavy jobs."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "greenlet>=3.1",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "aiolimiter>=1.2",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "anthropic>=0.40",
    "google-auth>=2.36",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.155",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest-httpx>=0.34",
]
aviation = [
    # Optional — heavy installs. Used by Phase 7 stats and gap analysis.
    # Enable with `uv sync --extra aviation`.
    "traffic>=2.10",
    "openap>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aloft"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
